@@ -268,7 +268,9 @@ public class AppSchedulable extends Schedulable {
   }
 
   private Resource assignContainer(FSSchedulerNode node, boolean reserved) {
-    LOG.info("Node offered to app: " + getName() + " reserved: " + reserved);
+    if (LOG.isDebugEnabled()) {
+      LOG.debug("Node offered to app: " + getName() + " reserved: " + reserved);
+    }
 
     if (reserved) {
       RMContainer rmContainer = node.getReservedContainer();
